--- a/cloud_formation_desacoplado/cloud_formation_etl.yml
+++ b/cloud_formation_desacoplado/cloud_formation_etl.yml
@@ -91,7 +91,7 @@ Resources:
               bucket_utils = os.environ['BUCKET_TRUSTED']
 
               s3 = boto3.client('s3')
-              url = "https://raw.githubusercontent.com/Grupo-09-2024-SPTECH/infra-cloud/df720ad6e54e911d26a9c58bcd151a1e2509a2c1/Lambda%20Codes/main.py"  # URL do arquivo no GitHub
+              url = "https://raw.githubusercontent.com/Grupo-09-2024-SPTECH/infra-cloud/main/Lambda%20Codes/raw_trusted/main.py"  # URL do arquivo no GitHub
               file_path = "/tmp/main.py"
               zip_path = "/tmp/lambda_package_raw_trusted.zip"
               
